--- a/Workshop_1_Implement.ipynb
+++ b/Workshop_1_Implement.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9c3ed629",
    "metadata": {},
    "outputs": [],
@@ -47,17 +47,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ae3d6005",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "This node has:\n",
+      " - x coordinate=3,\n",
+      " - z coordinate=4,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "mm.Node.clear()\n",
     "\n",
-    "node1 #= mm.Node(YOUR CODE HERE\n",
+    "node1 = mm.Node(0,0)\n",
+    "node2= mm.Node(3,4)\n",
     "\n",
     "print(node1)\n",
-    "#YOUR CODE HERE"
+    "print(node2)"
    ]
   },
   {
@@ -119,10 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b2a9b4fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -142,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "077b2951",
    "metadata": {},
    "outputs": [],
@@ -153,19 +180,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b16a1c0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=2,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "[[ 1. -0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1. -0.  0.]\n",
+      " [ 0.  0.  0.  0.  1.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  1.]]\n",
+      "[[ 5.e+19  0.e+00  0.e+00 -5.e+19  0.e+00  0.e+00]\n",
+      " [ 0.e+00  6.e+00 -6.e+00  0.e+00 -6.e+00 -6.e+00]\n",
+      " [ 0.e+00 -6.e+00  8.e+00  0.e+00  6.e+00  4.e+00]\n",
+      " [-5.e+19  0.e+00  0.e+00  5.e+19  0.e+00  0.e+00]\n",
+      " [ 0.e+00 -6.e+00  6.e+00  0.e+00  6.e+00  6.e+00]\n",
+      " [ 0.e+00 -6.e+00  4.e+00  0.e+00  6.e+00  8.e+00]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE\n",
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(2,0)\n",
     "\n",
-    "elem #= mm.Element(#YOUR CODE HERE\n",
+    "elem = mm.Element(node1, node2)\n",
     "\n",
     "section = {}\n",
-    "section['EI'] #= YOUR CODE HERE\n",
+    "section['EI'] = 4\n",
+    "\n",
     "elem.set_section(section)\n",
     "\n",
+    "print(elem)\n",
     "print(elem.T)\n",
     "print(elem.stiffness())"
    ]
@@ -183,12 +245,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "c047cded",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "mm.Node.clear()\n",
+    "mm.Element.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3bc72c14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[6, 7, 8],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=1,\n",
+      " - degrees of freedom=[9, 10, 11],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "[[ 6.123234e-17  1.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n",
+      "   0.000000e+00]\n",
+      " [-1.000000e+00  6.123234e-17  0.000000e+00  0.000000e+00  0.000000e+00\n",
+      "   0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00  0.000000e+00  0.000000e+00\n",
+      "   0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  0.000000e+00  6.123234e-17  1.000000e+00\n",
+      "   0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  0.000000e+00 -1.000000e+00  6.123234e-17\n",
+      "   0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n",
+      "   1.000000e+00]]\n",
+      "[[ 4.80000000e+01  6.12323400e+03  2.40000000e+01 -4.80000000e+01\n",
+      "  -6.12323400e+03  2.40000000e+01]\n",
+      " [ 6.12323400e+03  1.00000000e+20 -1.46957616e-15 -6.12323400e+03\n",
+      "  -1.00000000e+20 -1.46957616e-15]\n",
+      " [ 2.40000000e+01 -1.46957616e-15  1.60000000e+01 -2.40000000e+01\n",
+      "   1.46957616e-15  8.00000000e+00]\n",
+      " [-4.80000000e+01 -6.12323400e+03 -2.40000000e+01  4.80000000e+01\n",
+      "   6.12323400e+03 -2.40000000e+01]\n",
+      " [-6.12323400e+03 -1.00000000e+20  1.46957616e-15  6.12323400e+03\n",
+      "   1.00000000e+20  1.46957616e-15]\n",
+      " [ 2.40000000e+01 -1.46957616e-15  8.00000000e+00 -2.40000000e+01\n",
+      "   1.46957616e-15  1.60000000e+01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(0,1)\n",
+    "\n",
+    "elem = mm.Element(node1, node2)\n",
+    "\n",
+    "section = {}\n",
+    "section['EI'] = 4\n",
+    "\n",
+    "elem.set_section(section)\n",
+    "\n",
+    "print(elem)\n",
+    "print(elem.T)\n",
+    "print(elem.stiffness())"
    ]
   },
   {
@@ -205,12 +334,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8f52162",
+   "execution_count": 48,
+   "id": "67b2c6e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "mm.Node.clear()\n",
+    "mm.Element.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d8f52162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[6, 7, 8],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=-1,\n",
+      " - z coordinate=-1.7320508075688772,\n",
+      " - degrees of freedom=[9, 10, 11],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "[[-0.5       -0.8660254  0.         0.         0.         0.       ]\n",
+      " [ 0.8660254 -0.5        0.         0.         0.         0.       ]\n",
+      " [ 0.         0.         1.         0.         0.         0.       ]\n",
+      " [ 0.         0.         0.        -0.5       -0.8660254  0.       ]\n",
+      " [ 0.         0.         0.         0.8660254 -0.5        0.       ]\n",
+      " [ 0.         0.         0.         0.         0.         1.       ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(-1, -np.sqrt(3))\n",
+    "\n",
+    "elem = mm.Element(node1, node2)\n",
+    "\n",
+    "elem.set_section(section)\n",
+    "\n",
+    "print(elem)\n",
+    "print(elem.T)"
    ]
   },
   {
@@ -227,12 +401,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "eca0a1a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "mm.Node.clear()\n",
+    "mm.Element.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0c3ede5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=-1.7320508075688772,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "[[ 0.5       -0.8660254  0.         0.         0.         0.       ]\n",
+      " [ 0.8660254  0.5        0.         0.         0.         0.       ]\n",
+      " [ 0.         0.         1.         0.         0.         0.       ]\n",
+      " [ 0.         0.         0.         0.5       -0.8660254  0.       ]\n",
+      " [ 0.         0.         0.         0.8660254  0.5        0.       ]\n",
+      " [ 0.         0.         0.         0.         0.         1.       ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(1, -np.sqrt(3))\n",
+    "\n",
+    "elem = mm.Element(node1, node2)\n",
+    "\n",
+    "elem.set_section(section)\n",
+    "\n",
+    "print(elem)\n",
+    "print(elem.T)"
    ]
   },
   {
@@ -249,12 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "6b1d4c66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00000000e+00 0.00000000e+00 0.00000000e+00 2.22044605e-16\n",
+      " 2.00000000e+00 0.00000000e+00]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "print(np.matmul(elem.T,np.array([0,0,0,np.sqrt(3),1,0])))"
    ]
   },
   {
@@ -293,10 +521,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4712d452",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'K' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      7\u001b[0m f \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros (\u001b[38;5;241m6\u001b[39m) \u001b[38;5;66;03m#empty load vector\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m Kff, Fff \u001b[38;5;241m=\u001b[39m con\u001b[38;5;241m.\u001b[39mconstrain( K, F )\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(Kff)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'K' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#YOUR CODE HERE\n",
     "\n",
@@ -603,7 +843,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mude-week-2-6",
    "language": "python",
    "name": "python3"
   },
@@ -617,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
