--- a/Workshop_1_Implement.ipynb
+++ b/Workshop_1_Implement.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 131,
    "id": "9c3ed629",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 132,
    "id": "ae3d6005",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 133,
    "id": "b2a9b4fe",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 134,
    "id": "077b2951",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 135,
    "id": "b16a1c0a",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 136,
    "id": "c047cded",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 137,
    "id": "3bc72c14",
    "metadata": {},
    "outputs": [
@@ -269,13 +269,13 @@
       " This node has:\n",
       " - x coordinate=0,\n",
       " - z coordinate=0,\n",
-      " - degrees of freedom=[6, 7, 8],\n",
+      " - degrees of freedom=[0, 1, 2],\n",
       " - load vector=[0. 0. 0.]\n",
       "with node #2:\n",
       " This node has:\n",
       " - x coordinate=0,\n",
       " - z coordinate=1,\n",
-      " - degrees of freedom=[9, 10, 11],\n",
+      " - degrees of freedom=[3, 4, 5],\n",
       " - load vector=[0. 0. 0.]\n",
       "[[ 6.123234e-17  1.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n",
       "   0.000000e+00]\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 138,
    "id": "67b2c6e5",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "id": "d8f52162",
    "metadata": {},
    "outputs": [
@@ -358,13 +358,13 @@
       " This node has:\n",
       " - x coordinate=0,\n",
       " - z coordinate=0,\n",
-      " - degrees of freedom=[6, 7, 8],\n",
+      " - degrees of freedom=[0, 1, 2],\n",
       " - load vector=[0. 0. 0.]\n",
       "with node #2:\n",
       " This node has:\n",
       " - x coordinate=-1,\n",
       " - z coordinate=-1.7320508075688772,\n",
-      " - degrees of freedom=[9, 10, 11],\n",
+      " - degrees of freedom=[3, 4, 5],\n",
       " - load vector=[0. 0. 0.]\n",
       "[[-0.5       -0.8660254  0.         0.         0.         0.       ]\n",
       " [ 0.8660254 -0.5        0.         0.         0.         0.       ]\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "id": "eca0a1a6",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "id": "0c3ede5d",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
    "id": "6b1d4c66",
    "metadata": {},
    "outputs": [
@@ -521,31 +521,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "4712d452",
+   "execution_count": 143,
+   "id": "2e3520c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm.Node.clear()\n",
+    "mm.Element.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "683c202f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'K' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[41], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      7\u001b[0m f \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros (\u001b[38;5;241m6\u001b[39m) \u001b[38;5;66;03m#empty load vector\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m Kff, Fff \u001b[38;5;241m=\u001b[39m con\u001b[38;5;241m.\u001b[39mconstrain( K, F )\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(Kff)))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'K' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=-1.7320508075688772,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "[[ 0.5       -0.8660254  0.         0.         0.         0.       ]\n",
+      " [ 0.8660254  0.5        0.         0.         0.         0.       ]\n",
+      " [ 0.         0.         1.         0.         0.         0.       ]\n",
+      " [ 0.         0.         0.         0.5       -0.8660254  0.       ]\n",
+      " [ 0.         0.         0.         0.8660254  0.5        0.       ]\n",
+      " [ 0.         0.         0.         0.         0.         1.       ]]\n"
      ]
     }
    ],
    "source": [
-    "#YOUR CODE HERE\n",
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(1,-np.sqrt(3))\n",
+    "elem = mm.Element ( node1, node2 )\n",
+    "\n",
+    "print(elem)\n",
+    "print(elem.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "4712d452",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This constrainer has constrained the degrees of freedom: [0, 1, 2] with corresponding constrained values: [0, 0, 0])\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "section = {}\n",
+    "section['EI'] = 1\n",
+    "elem.set_section (section)\n",
+    "\n",
+    "k = elem.stiffness()\n",
     "\n",
     "con = mm.Constrainer()\n",
+    "con.fix_node(node1)\n",
+    "print(con)\n",
     "\n",
-    "#YOUR CODE HERE\n",
-    "\n",
-    "f = np.zeros (6) #empty load vector\n",
-    "Kff, Fff = con.constrain( K, F )\n",
+    "f = np.zeros(6) #empty load vector\n",
+    "Kff, Fff = con.constrain(k,f)\n",
     "print(np.shape(np.linalg.inv(Kff)))"
    ]
   },
@@ -581,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "dd462385-94f2-4240-9ba2-0bd9fe68ba3c",
    "metadata": {},
    "outputs": [],
@@ -602,12 +655,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "0ca6c018-0f98-4769-892c-cfdba0fea635",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "L = 1\n",
+    "\n",
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(L,0)"
    ]
   },
   {
@@ -622,12 +678,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "e1f2c0b6-983d-4deb-b4da-e264aa2b89b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "elem = mm.Element(node1, node2)\n",
+    "\n",
+    "EA = 1000\n",
+    "section = {}\n",
+    "section['EA'] = EA\n",
+    "elem.set_section(section)\n",
+    "print(elem)"
    ]
   },
   {
@@ -643,12 +725,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "6519786e-e29a-40eb-b0c4-dc4799eca0d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This constrainer has constrained the degrees of freedom: [0, 1, 2] with corresponding constrained values: [0, 0, 0])\n",
+      "This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[100.   0.   0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "con = mm.Constrainer()\n",
+    "con.fix_node(node1)\n",
+    "print(con)\n",
+    "\n",
+    "F = 100\n",
+    "node2.add_load([F,0,0])\n",
+    "print(node2)"
    ]
   },
   {
@@ -663,12 +764,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "fbb91539-ff16-4acf-8d91-546e2f7c77fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "global_k = elem.stiffness()\n",
+    "global_f = np.zeros (6)\n",
+    "\n",
+    "global_f[3:6] = node2.p"
    ]
   },
   {
@@ -683,12 +787,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "0d5351ad-7c75-4e5e-bcf2-e1b78c89379d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1 0.  0. ]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "Kff, Ff = con.constrain ( global_k, global_f )\n",
+    "u = np.matmul(np.linalg.inv(Kff), Ff)\n",
+    "print(u)"
    ]
   },
   {
@@ -703,12 +817,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "8e518f1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0. , 0. , 0. , 0.1, 0. , 0. ])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# EVENTUALLY YOUR CODE HERE"
+    "con.full_disp(u)"
    ]
   },
   {
@@ -731,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "36f0307e-51a7-45b9-82d9-72e9e03eced2",
    "metadata": {},
    "outputs": [],
@@ -750,12 +875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "3f78fa42-1c02-4aae-8f2a-9fb81ea93e74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "L = 1\n",
+    "node1 = mm.Node(0,0)\n",
+    "node2 = mm.Node(L,0)"
    ]
   },
   {
@@ -768,12 +895,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "27703dd0-8596-434f-9300-6c81bf7078d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element connecting:\n",
+      "node #1:\n",
+      " This node has:\n",
+      " - x coordinate=0,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[0, 1, 2],\n",
+      " - load vector=[0. 0. 0.]\n",
+      "with node #2:\n",
+      " This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "elem = mm.Element(node1, node2)\n",
+    "\n",
+    "EI = 1000\n",
+    "section = {}\n",
+    "section['EI'] = EI\n",
+    "elem.set_section(section)\n",
+    "\n",
+    "print(elem)"
    ]
   },
   {
@@ -786,12 +940,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "b0174ba8-1060-4bf2-b2cb-fee8b9cd4c80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This constrainer has constrained the degrees of freedom: [0, 1, 2] with corresponding constrained values: [0, 0, 0])\n",
+      "This node has:\n",
+      " - x coordinate=1,\n",
+      " - z coordinate=0,\n",
+      " - degrees of freedom=[3, 4, 5],\n",
+      " - load vector=[  0. 100.   0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "con = mm.Constrainer()\n",
+    "con.fix_node(node1)\n",
+    "print(con)\n",
+    "\n",
+    "F = 100\n",
+    "node2.add_load([0,F,0])\n",
+    "print(node2)"
    ]
   },
   {
@@ -804,12 +977,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "719d70a4-ab68-4a52-a538-ac0440ca7c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "global_k = elem.stiffness()\n",
+    "global_f = np.zeros (6)\n",
+    "\n",
+    "global_f[0:3] = node1.p\n",
+    "global_f[3:6] = node2.p"
    ]
   },
   {
@@ -822,12 +999,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "f940d04c-7440-4910-a7b0-d016f6b49548",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.03333333 -0.05      ]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "Kff, Ff = con.constrain ( global_k, global_f )\n",
+    "u = np.matmul(np.linalg.inv(Kff), Ff)\n",
+    "print(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "90cbcc1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.        ,  0.03333333,\n",
+       "       -0.05      ])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.full_disp(u)"
    ]
   },
   {
